--- a/app/views/scores/edit.js.erb
+++ b/app/views/scores/edit.js.erb
@@ -1,1 +1,2 @@
-$('.js-searched-score').replaceWith('<%= j(render 'form', score: @score, start_time: @score.start_time.to_date, start_date: @start_date) %>');
+$(".flash-messages").remove()
+$('.searched-score').replaceWith('<%= j(render 'form', score: @score, start_time: @score.start_time.to_date, start_date: @start_date) %>');
