--- a/app/views/scores/_calendar_td.html.erb
+++ b/app/views/scores/_calendar_td.html.erb
@@ -1,2 +1,5 @@
 <%= score.start_time.strftime('%-m/%-d') %>
 <%= content_tag :div, score.score, class: "score-in-td" %>
+<% if score.score_details.present? %>
+  <i class="fas fa-circle fa-xs has-score-detail"></i>
+<% end %>
